# CertiChain

./: .gitignore  Makefile  llm.py  main.py  pyproject.toml  vecdb_create.py  vecdb_metadata.py  vecdb_relevantdocs.py
db/chroma_db_with_metadata/b2b95b9b-f8d2-469f-9b17-eef835b845c4/: index_metadata.pickle
